[global] review same components

--- a/semcore/radio/src/style/radio.shadow.css
+++ b/semcore/radio/src/style/radio.shadow.css
@@ -107,7 +107,7 @@ SValue[state='normal'][keyboardFocused]::before {
 }
 
 SValue[state='invalid'][keyboardFocused]::before {
-  box-shadow: 0 0 0 3px var(--keyboard-focus-invalid);
+  box-shadow: var(--keyboard-focus-invalid);
 }
 
 SControl:checked ~ SValue[theme]::before {
