--- a/semcore/scroll-area/src/style/scroll-area.shadow.css
+++ b/semcore/scroll-area/src/style/scroll-area.shadow.css
@@ -31,26 +31,42 @@ SShadowHorizontal {
 SShadowHorizontal[position='median'] {
   &:before {
     left: 0;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to right,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 
   &:after {
     right: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to left,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 }
 
 SShadowHorizontal[position='start'] {
   &:before {
     left: 0;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to right,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 }
 
 SShadowHorizontal[position='end'] {
   &:after {
     right: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to left,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 }
 
@@ -67,26 +83,42 @@ SShadowVertical {
 SShadowVertical[position='median'] {
   &:before {
     top: 0;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to bottom,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 
   &:after {
     bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to top,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 }
 
 SShadowVertical[position='start'] {
   &:before {
     top: 0;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to bottom,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 }
 
 SShadowVertical[position='end'] {
   &:after {
     bottom: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(
+      to top,
+      rgba(25, 27, 35, 0.1) 20.55%,
+      rgba(255, 255, 255, 0.0001) 100%
+    );
   }
 }
 
