--- a/semcore/tab-panel/src/style/tab-panel.shadow.css
+++ b/semcore/tab-panel/src/style/tab-panel.shadow.css
@@ -16,7 +16,7 @@ STabPanelItem {
   font-size: var(--fs-200);
   color: var(--gray-500);
   border: 1px solid transparent;
-  border-radius: var(--rounded-m) var(--rounded-m) 0 0;
+  border-radius: 6px 6px 0 0;
   background: transparent;
   align-items: center;
   justify-content: center;
