--- a/semcore/card/src/style/card.shadow.css
+++ b/semcore/card/src/style/card.shadow.css
@@ -15,12 +15,17 @@ STitle {
   font-size: var(--fs-300);
   line-height: var(--lh-300);
   font-weight: 700;
+  margin-right: 4px;
 }
 
 SIcon {
-  margin-left: 4px;
   color: var(--gray-300);
   cursor: help;
+  margin-right: 4px;
+}
+STooltip {
+  display: inline-flex;
+  vertical-align: middle;
 }
 
 SDescription {
