--- a/semcore/product-head/src/style/title.shadow.css
+++ b/semcore/product-head/src/style/title.shadow.css
@@ -10,10 +10,11 @@ STitle {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  color: var(--gray-800);
 }
 
 STool {
-  margin-right: 8px;
+  margin-right: 4px;
 }
 
 SName {
