--- a/semcore/project-create/src/style/project-create.shadow.css
+++ b/semcore/project-create/src/style/project-create.shadow.css
@@ -1,3 +1,39 @@
+@import '@semcore/utils/style/var.css';
+
 SProjectCreate {
   max-width: 400px;
+}
+
+SIconInfo {
+  margin-right: 8px;
+  color: var(--gray-300);
+}
+
+SItem {
+  margin-top: 24px;
+}
+
+SLabel {
+  margin-bottom: 8px;
+  font-size: var(--fs-200);
+  line-height: var(--lh-200);
+}
+
+SSharingCheckbox {
+  margin-top: 16px;
+}
+
+SButtonSuccess {
+  margin-right: 12px;
+}
+
+STitle {
+  font-size: var(--fs-500);
+  line-height: var(--lh-500);
+  font-weight: 500;
+}
+
+SDescription {
+  font-size: var(--fs-100);
+  line-height: var(--lh-100);
 }
