--- a/semcore/data-table/src/style/data-table.shadow.css
+++ b/semcore/data-table/src/style/data-table.shadow.css
@@ -26,7 +26,7 @@ SColumn {
   display: flex;
   align-items: center;
   flex-grow: 1;
-  font-size: 12px;
+  font-size: var(--fs-100);
   color: var(--gray-800);
   box-sizing: border-box;
   position: relative;
@@ -53,7 +53,7 @@ SColumn[use='primary'] {
 
 SColumn[use='secondary'] {
   padding: 8px;
-  border-bottom: 1px solid var(--gray-100);
+  border-bottom: 1px solid var(--gray-300);
   background-color: var(--white);
 }
 
@@ -220,9 +220,9 @@ SCell {
   display: flex;
   flex: 1;
   flex-basis: auto;
-  font-size: 14px;
-  color: var(--gray-20);
-  line-height: 20px;
+  font-size: var(--fs-200);
+  line-height: var(--lh-200);
+  color: var(--gray-800);
   box-sizing: border-box;
   border-bottom: 1px solid var(--gray-100);
   overflow: hidden;
