[tag] removed debug logs and fixed border in primary theme

--- a/semcore/tag/src/style/tag.shadow.css
+++ b/semcore/tag/src/style/tag.shadow.css
@@ -62,6 +62,7 @@ STag[size='xl'] {
 
 STag[theme='primary'] {
   background-color: var(--colorBg);
+  border-color: var(--colorBg);
   color: var(--colorText);
 
   &[interactive]:hover,
