--- a/semcore/side-panel/src/style/side-panel.shadow.css
+++ b/semcore/side-panel/src/style/side-panel.shadow.css
@@ -15,14 +15,14 @@ SOverlay {
 }
 
 SPanel {
-  padding: 24px;
+  display: flex;
+  flex-direction: column;
   width: 260px;
   outline: none;
   position: fixed;
   box-sizing: border-box;
   will-change: transform;
   background: white;
-  color: var(--gray-800);
   z-index: 1;
 }
 
@@ -86,11 +86,16 @@ SPanel[placement='left'] {
 }
 
 SClose {
-  display: inline-flex;
+  cursor: pointer;
   position: absolute;
+  z-index: 1;
+}
+
+SClose {
+  display: inline-flex;
   right: 0;
   top: 0;
-  padding: 12px 12px 16px 12px;
+  padding: 15px 19px 15px 15px;
   color: var(--gray-300);
   border: none;
   background: none;
@@ -102,5 +107,63 @@ SClose {
 }
 
 SClose[keyboardFocused] {
-  box-shadow: var(--keyboard-focus);
+  box-shadow: var(--keyborad-focus);
+}
+
+SBack {
+  display: flex;
+  align-items: center;
+  color: var(--gray-500);
+  font-size: var(--fs-100);
+  line-height: var(--lh-100);
+  cursor: pointer;
+
+  &:hover {
+    color: var(--gray-600);
+  }
+}
+
+SBackText {
+  margin-left: 4px;
+  font-size: var(--fs-200);
+  line-height: var(--lh-200);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+STitle {
+  font-size: var(--fs-300);
+  line-height: var(--lh-300);
+  font-weight: 700;
+  color: var(--gray-800);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+SHeader {
+  padding-left: 24px;
+  padding-bottom: 4px;
+  padding-right: 48px;
+  padding-top: 4px;
+  min-height: 52px;
+  box-shadow: inset 0 -1px 0 var(--gray-200);
+  box-sizing: border-box;
+}
+
+SFooter {
+  min-height: 44px;
+  box-shadow: inset 0 1px 0 var(--gray-200);
+  box-sizing: border-box;
+}
+
+SBody {
+  display: flex;
+  height: 100%;
+  overflow: auto;
+  padding-left: 24px;
+  padding-bottom: 4px;
+  padding-right: 19px;
+  padding-top: 4px;
 }
