--- a/semcore/side-panel/src/style/side-panel.shadow.css
+++ b/semcore/side-panel/src/style/side-panel.shadow.css
@@ -10,13 +10,14 @@ SOverlay {
   display: flex;
   overflow: hidden;
   z-index: 10005;
-  background: rgba(0, 0, 0, 0.8);
+  background: color-mod(var(--gray-800) a(70%));
   -webkit-overflow-scrolling: touch;
 }
 
 SPanel {
-  padding: 24px;
-  width: 256px;
+  display: flex;
+  flex-direction: column;
+  width: 260px;
   outline: none;
   position: fixed;
   box-sizing: border-box;
@@ -26,7 +27,7 @@ SPanel {
 }
 
 SPanel[placement='top'] {
-  box-shadow: 3px 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 0 12px rgba(25, 27, 35, 0.15);
   width: 100%;
   margin-bottom: auto;
   top: 0;
@@ -34,7 +35,7 @@ SPanel[placement='top'] {
 }
 
 SPanel[placement='right'] {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--box-shadow-popper);
   height: 100vh;
   margin-left: auto;
   top: 0;
@@ -42,7 +43,7 @@ SPanel[placement='right'] {
 }
 
 SPanel[placement='bottom'] {
-  box-shadow: 3px 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 0 12px rgba(25, 27, 35, 0.15);
   width: 100%;
   margin-top: auto;
   bottom: 0;
@@ -50,7 +51,7 @@ SPanel[placement='bottom'] {
 }
 
 SPanel[placement='left'] {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--box-shadow-popper);
   height: 100vh;
   margin-right: auto;
   top: 0;
@@ -85,23 +86,84 @@ SPanel[placement='left'] {
 }
 
 SClose {
-  display: inline-flex;
+  cursor: pointer;
   position: absolute;
+  z-index: 1;
+}
+
+SClose {
+  display: inline-flex;
   right: 0;
   top: 0;
-  padding: 12px;
-  color: var(--stone);
-  cursor: pointer;
-  z-index: 1;
+  padding: 15px 19px 15px 15px;
+  color: var(--gray-300);
   border: none;
   background: none;
   outline: none;
 
   &:hover {
-    color: color-mod(var(--stone) shade(12%));
+    color: var(--gray-400);
   }
 }
 
 SClose[keyboardFocused] {
   box-shadow: var(--keyborad-focus);
+}
+
+SBack {
+  display: flex;
+  align-items: center;
+  color: var(--gray-500);
+  font-size: var(--fs-100);
+  line-height: var(--lh-100);
+  cursor: pointer;
+
+  &:hover {
+    color: var(--gray-600);
+  }
+}
+
+SBackText {
+  margin-left: 4px;
+  font-size: var(--fs-200);
+  line-height: var(--lh-200);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+STitle {
+  font-size: var(--fs-300);
+  line-height: var(--lh-300);
+  font-weight: 700;
+  color: var(--gray-800);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+SHeader {
+  padding-left: 24px;
+  padding-bottom: 4px;
+  padding-right: 48px;
+  padding-top: 4px;
+  min-height: 52px;
+  box-shadow: inset 0 -1px 0 var(--gray-200);
+  box-sizing: border-box;
+}
+
+SFooter {
+  min-height: 44px;
+  box-shadow: inset 0 1px 0 var(--gray-200);
+  box-sizing: border-box;
+}
+
+SBody {
+  display: flex;
+  height: 100%;
+  overflow: auto;
+  padding-left: 24px;
+  padding-bottom: 4px;
+  padding-right: 19px;
+  padding-top: 4px;
 }
