[dropdown-menu] supported legacy xl sizing with fallback to l sizing

--- a/semcore/dropdown-menu/src/style/dropdown-menu.shadow.css
+++ b/semcore/dropdown-menu/src/style/dropdown-menu.shadow.css
@@ -48,7 +48,8 @@ SDropdownMenuItem[disabled] {
   pointer-events: none;
 }
 
-SDropdownMenuItem[size='l'] {
+SDropdownMenuItem[size='l'],
+SDropdownMenuItem[size='xl'] {
   font-size: var(--fs-300);
   line-height: var(--lh-300);
   padding: 8px 12px;
