--- a/semcore/notice/src/style/notice.shadow.css
+++ b/semcore/notice/src/style/notice.shadow.css
@@ -17,6 +17,10 @@ SNotice[theme='info'] {
 
   & SCloseIcon {
     color: var(--blue-400);
+
+    &:hover {
+      color: var(--blue-500);
+    }
   }
 }
 
@@ -26,6 +30,10 @@ SNotice[theme='danger'] {
 
   & SCloseIcon {
     color: var(--red-400);
+
+    &:hover {
+      color: var(--red-500);
+    }
   }
 }
 
@@ -35,6 +43,10 @@ SNotice[theme='warning'] {
 
   & SCloseIcon {
     color: var(--orange-400);
+
+    &:hover {
+      color: var(--orange-500);
+    }
   }
 }
 
@@ -44,6 +56,10 @@ SNotice[theme='success'] {
 
   & SCloseIcon {
     color: var(--green-400);
+
+    &:hover {
+      color: var(--green-500);
+    }
   }
 }
 
