--- a/semcore/d3-chart/src/style/axis.shadow.css
+++ b/semcore/d3-chart/src/style/axis.shadow.css
@@ -30,18 +30,17 @@ STitle {
 
 STitle[position='top'] {
   text-anchor: middle;
-  transform: translateY(-16px);
 }
 
 STitle[position='bottom'] {
   text-anchor: middle;
   alignment-baseline: hanging;
-  transform: translateY(16px);
 }
 
 STitle[position='right'] {
   transform: rotate(-90deg);
   alignment-baseline: middle;
+  text-anchor: middle;
 }
 
 STitle[position='left'] {
