[checkbox] added position relative for label

--- a/semcore/checkbox/src/style/checkbox.shadow.css
+++ b/semcore/checkbox/src/style/checkbox.shadow.css
@@ -1,6 +1,7 @@
 @import '@semcore/utils/style/var.css';
 
 SLabel {
+  position: relative;
   display: inline-flex;
   align-items: flex-start;
   cursor: pointer;
