--- a/semcore/inline-input/src/style/inline-input.shadow.css
+++ b/semcore/inline-input/src/style/inline-input.shadow.css
@@ -26,7 +26,7 @@ SValue {
 
   width: 100%;
   height: 100%;
-  padding: 4px;
+  padding: 0px 4px;
   border: none;
   box-sizing: border-box;
   color: var(--gray-800);
