[website] fixed changelogs visual formatting

--- a/website/src/components/FormatText.module.css
+++ b/website/src/components/FormatText.module.css
@@ -270,11 +270,11 @@
   padding-right: 0;
 }
 
-.formatText tt code {
+.formatText code {
   background-color: hsla(220, 8%, 37%, 0.1);
   border-radius: 4px;
   font-family: Consolas, 'Roboto Mono', 'Liberation Mono', Menlo, Courier, monospace;
-  padding: 0 0;
+  padding: 0 2px;
 }
 
 .formatText pre code {
