--- a/website/src/docs-components/PlaygroundGeneration.module.css
+++ b/website/src/docs-components/PlaygroundGeneration.module.css
@@ -14,6 +14,7 @@
 .wrapperPlayground {
   display: flex;
   border: 1px solid #dee3e5;
+  overflow: hidden;
   border-radius: 6px;
   height: auto;
   margin-bottom: 32px;
