[d3-chart] fixed example and variable for ReferenceLine and remove TODO

--- a/semcore/d3-chart/src/style/reference-line.shadow.css
+++ b/semcore/d3-chart/src/style/reference-line.shadow.css
@@ -6,7 +6,7 @@ SReferenceLine {
 }
 
 STitle {
-  font-size: 12px;
+  font-size: var(--fs-100);
   fill: var(--gray-500);
   transform-origin: var(--transform-origin);
 }
