[wizard] fixed stepper padding

--- a/semcore/wizard/src/style/wizard.shadow.css
+++ b/semcore/wizard/src/style/wizard.shadow.css
@@ -52,7 +52,7 @@ SStepper {
   }
 
   @media (max-width: 1060px) {
-    padding: 8px;
+    padding: 8px 4px;
     &:hover {
       width: fit-content;
       max-width: 220px;
