--- a/semcore/d3-chart/src/style/plotA11yView.shadow.css
+++ b/semcore/d3-chart/src/style/plotA11yView.shadow.css
@@ -2,6 +2,7 @@
 @import '@semcore/d3-chart/src/style/var.css';
 
 SPlotA11yView {
+  user-select: none;
   pointer-events: none;
   opacity: 0;
   background-color: white;
@@ -17,13 +18,14 @@ SPlotA11yView {
 }
 SPlotA11yView:focus-within,
 SPlotA11yView:focus {
+  user-select: all;
   pointer-events: all;
   opacity: 1;
   z-index: 100;
   position: relative;
   display: block;
 }
-SPlotA11yView em {
+SPlotA11yView a {
   cursor: pointer;
   text-decoration: underline;
   margin-bottom: 8px;
