--- a/semcore/data-table/src/style/data-table.shadow.css
+++ b/semcore/data-table/src/style/data-table.shadow.css
@@ -288,6 +288,6 @@ SScrollAreaBar[orientation='horizontal'] {
 SHeightHold {
   position: absolute;
   top: 0;
-  width: 0;
+  width: 100%;
   pointer-events: none;
 }
