[d3-chart] show focus outline only during keyboard navigation

--- a/semcore/d3-chart/src/style/plot.shadow.css
+++ b/semcore/d3-chart/src/style/plot.shadow.css
@@ -4,3 +4,13 @@
 SPlot {
   overflow: hidden;
 }
+SPlot:active,
+SPlot:focus {
+  outline: 0;
+  text-decoration: none;
+}
+
+SPlot[keyboardFocused] {
+  border: 1px solid var(--blue-400);
+  box-shadow: var(--keyboard-focus);
+}
