[data-table] fixed scrolling of tables with virtualScroll prop

--- a/semcore/data-table/src/style/data-table.shadow.css
+++ b/semcore/data-table/src/style/data-table.shadow.css
@@ -288,6 +288,8 @@ SScrollAreaBar[orientation='horizontal'] {
 SHeightHold {
   position: absolute;
   top: 0;
-  width: 0;
+  width: 100%;
   pointer-events: none;
+  /* should be under other layers */
+  z-index: -1;
 }
