--- a/website/src/components/Example.module.css
+++ b/website/src/components/Example.module.css
@@ -7,7 +7,8 @@
 .view {
   display: flex;
   padding: 24px;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   font-size: 12px;
 }
 
