--- a/semcore/select/src/style/input-search.shadow.css
+++ b/semcore/select/src/style/input-search.shadow.css
@@ -1,24 +1,17 @@
 @import '@semcore/utils/style/var.css';
 
-SInputSearch[size] {
-  padding: 0;
+SInputSearch[size='m'] {
+  height: 32px;
 }
 
-SInputSearch > [data-ui-name='Input']:first-child > [data-ui-name='InputSearch'] ~ div {
+SClose[hide] {
+  visibility: hidden;
+}
+
+/* Style for Input */
+SOutline {
   top: -1px;
   left: -1px;
   width: 100%;
   border-radius: var(--rounded-m) var(--rounded-m) 0 0;
-}
-
-SInputSearch[size='m'] > [data-ui-name='Input']:first-child {
-  height: 32px;
-}
-
-SInputSearch [data-ui-name='Input.Addon']:last-of-type {
-  visibility: hidden;
-}
-
-SInputSearch[filled] [data-ui-name='Input.Addon']:last-of-type {
-  visibility: visible;
 }
