[website] Remove flex display and add width=100% for example container
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/website/src/components/Example.module.css
+++ b/website/src/components/Example.module.css
@@ -5,10 +5,9 @@
 }
 
 .view {
-  display: flex;
+  width: 100%;
   padding: 24px;
-  justify-content: flex-start;
-  align-items: flex-start;
+  box-sizing: border-box;
   font-size: 12px;
 }
 
