--- a/website/src/components/SearchHome.module.css
+++ b/website/src/components/SearchHome.module.css
@@ -105,7 +105,7 @@
 .option {
   padding: 0 28px;
   height: 54px;
-  display: block;
+  display: block !important;
   font-size: 16px;
   text-decoration: none;
 }
