[d3-chart] a11y data table styles now are more explicit

--- a/semcore/d3-chart/src/style/plotA11yView.shadow.css
+++ b/semcore/d3-chart/src/style/plotA11yView.shadow.css
@@ -31,3 +31,9 @@ SPlotA11yView a {
   margin-bottom: 8px;
   display: block;
 }
+
+SPlotA11yView table,
+SPlotA11yView td,
+SPlotA11yView th {
+  border: 1px solid black;
+}
